[gd_scene load_steps=4 format=3 uid="uid://egr74mfdalyu"]

[ext_resource type="Script" path="res://fireball2.gd" id="1_3ux4q"]
[ext_resource type="Texture2D" uid="uid://cwt1rggmgfwei" path="res://bow_and_arrow.png" id="2_6uu16"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ooqgn"]
radius = 1.0

[node name="arrow" type="RigidBody2D"]
top_level = true
collision_layer = 1572864
collision_mask = 1572864
gravity_scale = 0.3
script = ExtResource("1_3ux4q")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(6, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_6uu16")
hframes = 3
vframes = 4
frame = 9

[node name="CollisionShape2D" type="Area2D" parent="."]
position = Vector2(12, 0)
collision_layer = 1572864
collision_mask = 1572864

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionShape2D"]
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_ooqgn")

[node name="life_span2" type="Timer" parent="."]
wait_time = 0.1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="CollisionShape2D" to="." method="_on_collision_shape_2d_body_entered"]
[connection signal="timeout" from="life_span2" to="." method="_on_life_span_2_timeout"]
